# hf-audio-course

./: README.md  lesson-1.ipynb  pyproject.toml
